# ask_openai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ask_me/: _.py  __init__.py
ask_openai/: _.py  __.py  __init__.py
tests/: basic_test.py
