[tool.poetry]
name = "ask-openai"
version = "0.1.4"
description = "Explain exceptions using OpenAI"
authors = ["RA <numpde@null.net>"]
readme = "README.md"
packages = [{ include = "ask_openai" }]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
