[tool.poetry]
name = "ask-openai"
version = "0.1.6"
description = "Explain exceptions using OpenAI / GPT-3"
authors = ["RA <numpde@null.net>"]
readme = "README.md"
packages = [{ include = "ask_openai" }]
homepage = "https://github.com/numpde/ask_openai"
repository = "https://github.com/numpde/ask_openai"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
